--- a/static/假交友.html
+++ b/static/假交友.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>假交友・投資詐財 — 互動模擬（HTML 版）</title>
+<title>假交友・投資詐財 </title>
 <style>
   :root{
     --bg:#fff5f8;           /* 背景淡粉 */
@@ -456,3 +456,4 @@ launch();
 </script>
 </body>
 </html>
+
