--- a/static/假婚緣.html
+++ b/static/假婚緣.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>假婚緣 — 互動防詐遊戲</title>
+<title>假婚緣</title>
 <style>
   :root{
     --bg:#fff5f8;          /* 粉系背景 */
@@ -479,3 +479,4 @@ window.addEventListener('DOMContentLoaded', Game.init);
 </script>
 </body>
 </html>
+
