--- a/static/假買賣家.html
+++ b/static/假買賣家.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>詐騙情境互動遊戲（故事版）— HTML 版</title>
+<title>假買賣家</title>
 <style>
   :root{
     /* 粉紅系主題 */
@@ -446,3 +446,4 @@ init();
 </script>
 </body>
 </html>
+
