--- a/static/假交友.html
+++ b/static/假交友.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <main class="app" id="app">
-    <div class="title">假交友・投資詐財 — 互動模擬（HTML 版）</div>
+    <div class="title">假交友・投資詐財 </div>
 
     <!-- 訊息區 -->
     <section class="panel">
@@ -456,4 +456,5 @@ launch();
 </script>
 </body>
 </html>
+
 
