--- a/static/假買賣家.html
+++ b/static/假買賣家.html
@@ -93,7 +93,7 @@
   <div class="wrap">
     <!-- 故事/訊息 -->
     <section class="panel">
-      <div class="header">詐騙情境互動遊戲（故事版）</div>
+      <div class="header">假買賣家</div>
       <div id="message" class="content">
         <!-- 由 JS 注入 -->
       </div>
@@ -446,4 +446,5 @@ init();
 </script>
 </body>
 </html>
+
 
