--- a/static/假婚緣.html
+++ b/static/假婚緣.html
@@ -77,6 +77,7 @@
 <body>
   <div class="app">
     <div class="layout">
+      <div class="title">假婚緣 </div>
       <!-- 左側：訊息區 + 結局/教學 -->
       <div>
         <div class="card msg" id="msgCard">
@@ -479,4 +480,5 @@ window.addEventListener('DOMContentLoaded', Game.init);
 </script>
 </body>
 </html>
+
 
