--- a/static/詐騙手法.html
+++ b/static/詐騙手法.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>左右獨立 Accordion</title>
+  <title>詐騙手法</title>
   <style>
     body {
       font-family: Arial, sans-serif;
