--- a/static/詐騙手法.html
+++ b/static/詐騙手法.html
@@ -73,6 +73,10 @@
   </style>
 </head>
 <body>
+<button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
 
   <div class="accordion-container">
     <!-- 左邊 -->
