--- a/static/詐騙案例.html
+++ b/static/詐騙案例.html
@@ -140,6 +140,11 @@
   </style>
 </head>
 <body>
+  <button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
+
   <div class="container">
       <!-- 案例內容區 -->
       <div class="carousel">
