--- a/static/詐騙案例.html
+++ b/static/詐騙案例.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>案例切換頁面</title>
+  <title>詐騙案例</title>
   <style>
     /* 基本樣式 */
     body {
