--- a/static/現身說法.html
+++ b/static/現身說法.html
@@ -64,6 +64,11 @@
   </style>
 </head>
 <body>
+  <button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
+
   <header>
     <h1>YouTube 影片</h1>
   </header>
