--- a/static/反詐學堂.html
+++ b/static/反詐學堂.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>詐騙模擬入口</title>
+    <title>詐騙測驗與模擬情境</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,6 +67,11 @@
     </style>
 </head>
 <body>
+    <button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
+
     <header>
         詐騙模擬入口
     </header>
