--- a/static/題目測驗.html
+++ b/static/題目測驗.html
@@ -107,6 +107,11 @@
 </head>
 
 <body>
+  <button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
+
   <div class="quiz-container">
     <h1>詐騙防範知識測驗</h1>
     <div id="quiz"></div>
