--- a/static/互動遊戲.html
+++ b/static/互動遊戲.html
@@ -77,6 +77,11 @@
     </style>
 </head>
 <body>
+    <button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
+
     <h1>選擇你要玩的遊戲</h1>
     <div class="button-container">
         <a class="game-button" href="寵物投票.html">寵物投票</a>
@@ -93,3 +98,4 @@
     <div class="particle" style="left: 90%; animation-delay: 3s;"></div>
 </body>
 </html>
+
