--- a/static/假交友.html
+++ b/static/假交友.html
@@ -69,6 +69,11 @@
 </style>
 </head>
 <body>
+  <button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
+
   <main class="app" id="app">
     <div class="title">假交友・投資詐財 </div>
 
@@ -456,5 +461,6 @@ launch();
 </script>
 </body>
 </html>
+
 
 
