--- a/static/假婚緣.html
+++ b/static/假婚緣.html
@@ -74,6 +74,11 @@
 </style>
 </head>
 <body>
+  <button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
+
   <div class="app">
     <div class="layout">
       <!-- 左側：訊息區 + 結局/教學 -->
@@ -500,3 +505,4 @@ window.addEventListener('DOMContentLoaded', Game.init);
 </script>
 </body>
 </html>
+
