--- a/static/假買賣家.html
+++ b/static/假買賣家.html
@@ -90,6 +90,11 @@
 </style>
 </head>
 <body>
+  <button onclick="window.history.back()" 
+        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  ← 返回上一頁
+</button>
+
   <div class="wrap">
     <!-- 故事/訊息 -->
     <section class="panel">
@@ -446,5 +451,6 @@ init();
 </script>
 </body>
 </html>
+
 
 
