--- a/static/題目測驗.html
+++ b/static/題目測驗.html
@@ -103,14 +103,27 @@
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
+    .back-btn {
+      position: fixed;
+      left: 50%;            /* 讓它水平置中，可調整 */
+      bottom: 60px;        /* 控制垂直位置 → 越大越上面 */
+      transform: translateX(-50%);  /* 讓 left:50% 真正置中 */
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 8px;
+      background: white;
+      border: 2px solid #333;
+      cursor: pointer;
+      z-index: 999;
+    }
   </style>
 </head>
 
 <body>
-  <button onclick="window.history.back()" 
-        style="margin: 20px; padding: 10px 20px; font-size: 16px; border-radius: 8px; cursor: pointer;">
+  <button class="back-btn" onclick="window.history.back()">
   ← 返回上一頁
-</button>
+</button
 
   <div class="quiz-container">
     <h1>詐騙防範知識測驗</h1>
