--- a/static/題目測驗.html
+++ b/static/題目測驗.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>詐騙防範知識小測驗</title>
   <style>
     body {
@@ -68,11 +68,6 @@
       transform: scale(1.03);
     }
 
-    .option-btn.selected {
-      background-color: #264c74;
-      box-shadow: 0 0 0 3px #a8dadc inset;
-    }
-
     #next-btn {
       margin-top: 20px;
       padding: 12px 24px;
@@ -104,27 +99,26 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    .back-btn {
-      position: fixed;
-      left: 50%;            /* 讓它水平置中，可調整 */
-      bottom: 60px;        /* 控制垂直位置 → 越大越上面 */
-      transform: translateX(-50%);  /* 讓 left:50% 真正置中 */
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 8px;
-      background: white;
-      border: 2px solid #333;
-      cursor: pointer;
-      z-index: 999;
-    }
+  .back-btn {
+    position: fixed;
+    left: 50%;            /* 讓它水平置中，可調整 */
+    bottom: 60px;        /* 控制垂直位置 → 越大越上面 */
+    transform: translateX(-50%);  /* 讓 left:50% 真正置中 */
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 8px;
+    background: white;
+    border: 2px solid #333;
+    cursor: pointer;
+    z-index: 999;
+  }
   </style>
 </head>
 
 <body>
   <button class="back-btn" onclick="window.history.back()">
   ← 返回上一頁
-</button
-
+</button>
   <div class="quiz-container">
     <h1>詐騙防範知識測驗</h1>
     <div id="quiz"></div>
@@ -134,27 +128,107 @@
 
   <script>
     const quizData = [
-      { question: "收到簡訊說您信用卡被凍結，請點擊連結解凍，應該怎麼辦？", options: ["點擊連結立即解凍", "忽略簡訊並刪除", "撥打簡訊提供的電話號碼確認"], correct: 1 },
-      { question: "陌生來電聲稱是警察，要求提供您的身份證號碼，應該？", options: ["立即配合提供", "要求對方出示證明再決定", "掛斷電話並聯繫當地警局核實"], correct: 2 },
-      { question: "有人自稱公司老闆，要求您立即轉賬到指定賬戶，應該？", options: ["確認對方身份後再處理", "直接轉賬避免延誤", "聯繫公司核實信息"], correct: 2 },
-      { question: "在社交平台遇到陌生人說有高回報投資機會，應該怎麼辦？", options: ["立即投資以免錯過機會", "忽略對方並封鎖", "詢問更多細節後再決定"], correct: 1 },
-      { question: "自稱快遞公司來電，說包裹丟失需要提供銀行信息賠償，應該？", options: ["提供銀行信息以便處理", "要求對方提供更多證據", "直接掛斷電話"], correct: 2 },
-      { question: "網購時，對方要求您脫離平台直接轉賬交易，應該？", options: ["同意對方建議", "拒絕並堅持通過平台交易", "與對方協商再決定"], correct: 1 },
-      { question: "收到陌生郵件，內附連結要求登錄銀行賬戶，應該？", options: ["點擊連結登錄", "忽略郵件並刪除", "聯繫銀行客服核實"], correct: 1 },
-      { question: "有人自稱親友，急需借錢但無法當面確認身份，應該？", options: ["立即匯款幫助對方", "要求對方提供更多證據", "聯繫其他親友核實信息"], correct: 2 },
-      { question: "收到通知說您中了巨額獎金，需支付手續費領取，應該？", options: ["支付手續費領獎", "直接忽略並刪除", "聯繫對方確認細節"], correct: 1 },
-      { question: "陌生人聲稱是技術支持，要求遠程控制您的電腦，應該？", options: ["授權對方操作", "詢問對方更多細節", "拒絕並聯繫官方客服"], correct: 2 },
-      { question: "接到電話說家人發生意外，需要立即匯款，應該？", options: ["詢問更多細節後匯款", "聯繫家人或相關機構核實", "立即匯款避免延誤"], correct: 1 },
-      { question: "陌生人提供高薪工作機會，但需先支付押金，應該？", options: ["支付押金獲得機會", "拒絕並報警", "先查詢對方公司背景"], correct: 1 },
-      { question: "在社交軟件中，有人邀請加入賺錢群，應該？", options: ["加入並嘗試", "忽略並封鎖對方", "詢問朋友是否可信"], correct: 1 },
-      { question: "接到銀行客服電話，要求提供驗證碼核實信息，應該？", options: ["提供驗證碼", "要求對方提供更多資料", "拒絕並聯繫官方客服"], correct: 2 },
-      { question: "有人聲稱能幫您清除不良信用記錄，需提前支付費用，應該？", options: ["支付費用解決問題", "拒絕並掛斷電話", "詢問對方是否有其他方案"], correct: 1 },
-      { question: "在網絡遊戲中，有人索要您的帳號密碼以幫助升級，應該？", options: ["提供密碼給對方", "拒絕並保護帳號安全", "詢問對方是否可信"], correct: 1 },
-      { question: "接到電話說您涉嫌犯罪，需立即繳納保證金，應該？", options: ["立即支付保證金", "詢問對方更多細節", "掛斷電話並聯繫警方"], correct: 2 },
-      { question: "有人聲稱低價出售名牌產品，但需提前匯款，應該？", options: ["提前匯款購買", "要求貨到付款", "拒絕並忽略對方"], correct: 2 },
-      { question: "收到電子郵件說您中了獎，需直接回復個人信息領取，應該？", options: ["回復郵件領獎", "忽略並刪除郵件", "聯繫對方確認細節"], correct: 1 },
-      { question: "在社交媒體上，有人主動借錢但無法提供身份證明，應該？", options: ["借錢幫助對方", "要求對方提供更多證據", "直接拒絕"], correct: 2 }
-    ];
+  {
+    question: "收到簡訊說您信用卡被凍結，請點擊連結解凍，應該怎麼辦？",
+    options: ["點擊連結立即解凍", "忽略簡訊並刪除", "撥打簡訊提供的電話號碼確認"],
+    correct: 1,
+  },
+  {
+    question: "陌生來電聲稱是警察，要求提供您的身份證號碼，應該？",
+    options: ["立即配合提供", "要求對方出示證明再決定", "掛斷電話並聯繫當地警局核實"],
+    correct: 2,
+  },
+  {
+    question: "有人自稱公司老闆，要求您立即轉賬到指定賬戶，應該？",
+    options: ["確認對方身份後再處理", "直接轉賬避免延誤", "聯繫公司核實信息"],
+    correct: 2,
+  },
+  {
+    question: "在社交平台遇到陌生人說有高回報投資機會，應該怎麼辦？",
+    options: ["立即投資以免錯過機會", "忽略對方並封鎖", "詢問更多細節後再決定"],
+    correct: 1,
+  },
+  {
+    question: "自稱快遞公司來電，說包裹丟失需要提供銀行信息賠償，應該？",
+    options: ["提供銀行信息以便處理", "要求對方提供更多證據", "直接掛斷電話"],
+    correct: 2,
+  },
+  {
+    question: "網購時，對方要求您脫離平台直接轉賬交易，應該？",
+    options: ["同意對方建議", "拒絕並堅持通過平台交易", "與對方協商再決定"],
+    correct: 1,
+  },
+  {
+    question: "收到陌生郵件，內附連結要求登錄銀行賬戶，應該？",
+    options: ["點擊連結登錄", "忽略郵件並刪除", "聯繫銀行客服核實"],
+    correct: 1,
+  },
+  {
+    question: "有人自稱親友，急需借錢但無法當面確認身份，應該？",
+    options: ["立即匯款幫助對方", "要求對方提供更多證據", "聯繫其他親友核實信息"],
+    correct: 2,
+  },
+  {
+    question: "收到通知說您中了巨額獎金，需支付手續費領取，應該？",
+    options: ["支付手續費領獎", "直接忽略並刪除", "聯繫對方確認細節"],
+    correct: 1,
+  },
+  {
+    question: "陌生人聲稱是技術支持，要求遠程控制您的電腦，應該？",
+    options: ["授權對方操作", "詢問對方更多細節", "拒絕並聯繫官方客服"],
+    correct: 2,
+  },
+  {
+    question: "接到電話說家人發生意外，需要立即匯款，應該？",
+    options: ["詢問更多細節後匯款", "聯繫家人或相關機構核實", "立即匯款避免延誤"],
+    correct: 1,
+  },
+  {
+    question: "陌生人提供高薪工作機會，但需先支付押金，應該？",
+    options: ["支付押金獲得機會", "拒絕並報警", "先查詢對方公司背景"],
+    correct: 1,
+  },
+  {
+    question: "在社交軟件中，有人邀請加入賺錢群，應該？",
+    options: ["加入並嘗試", "忽略並封鎖對方", "詢問朋友是否可信"],
+    correct: 1,
+  },
+  {
+    question: "接到銀行客服電話，要求提供驗證碼核實信息，應該？",
+    options: ["提供驗證碼", "要求對方提供更多資料", "拒絕並聯繫官方客服"],
+    correct: 2,
+  },
+  {
+    question: "有人聲稱能幫您清除不良信用記錄，需提前支付費用，應該？",
+    options: ["支付費用解決問題", "拒絕並掛斷電話", "詢問對方是否有其他方案"],
+    correct: 1,
+  },
+  {
+    question: "在網絡遊戲中，有人索要您的帳號密碼以幫助升級，應該？",
+    options: ["提供密碼給對方", "拒絕並保護帳號安全", "詢問對方是否可信"],
+    correct: 1,
+  },
+  {
+    question: "接到電話說您涉嫌犯罪，需立即繳納保證金，應該？",
+    options: ["立即支付保證金", "詢問對方更多細節", "掛斷電話並聯繫警方"],
+    correct: 2,
+  },
+  {
+    question: "有人聲稱低價出售名牌產品，但需提前匯款，應該？",
+    options: ["提前匯款購買", "要求貨到付款", "拒絕並忽略對方"],
+    correct: 2,
+  },
+  {
+    question: "收到電子郵件說您中了獎，需直接回復個人信息領取，應該？",
+    options: ["回復郵件領獎", "忽略並刪除郵件", "聯繫對方確認細節"],
+    correct: 1,
+  },
+  {
+    question: "在社交媒體上，有人主動借錢但無法提供身份證明，應該？",
+    options: ["借錢幫助對方", "要求對方提供更多證據", "直接拒絕"],
+    correct: 2,
+  },
+];
 
     const quizContainer = document.getElementById("quiz");
     const nextBtn = document.getElementById("next-btn");
@@ -162,42 +236,41 @@
 
     let currentQuestion = 0;
     let score = 0;
-    let selectedAnswer = null;
-    let hasAnsweredCurrent = false;
 
     function loadQuestion() {
       const q = quizData[currentQuestion];
       quizContainer.innerHTML = `
         <div class="question">${q.question}</div>
         <ul class="options">
-          ${q.options.map((option, index) => `
-            <li><button class="option-btn" data-index="${index}">${option}</button></li>
-          `).join("")}
+          ${q.options
+            .map(
+              option =>
+                `<li><button class="option-btn" onclick="checkAnswer('${option}')">${option}</button></li>`
+            )
+            .join("")}
         </ul>
       `;
       nextBtn.style.display = "none";
-      selectedAnswer = null;
-      hasAnsweredCurrent = false;
+    }
 
+    function checkAnswer(answer) {
+      const correct = quizData[currentQuestion].answer;
       const buttons = document.querySelectorAll(".option-btn");
+
       buttons.forEach(btn => {
-        btn.addEventListener("click", () => {
-          buttons.forEach(b => b.classList.remove("selected"));
-          btn.classList.add("selected");
-          selectedAnswer = parseInt(btn.dataset.index);
-          nextBtn.style.display = "inline-block";
-        });
+        btn.disabled = true;
+        if (btn.textContent === correct) {
+          btn.style.backgroundColor = "#2a9d8f";
+        } else if (btn.textContent === answer) {
+          btn.style.backgroundColor = "#e63946";
+        }
       });
+
+      if (answer === correct) score++;
+      nextBtn.style.display = "inline-block";
     }
 
     nextBtn.addEventListener("click", () => {
-      if (selectedAnswer !== null && !hasAnsweredCurrent) {
-        if (selectedAnswer === quizData[currentQuestion].correct) {
-          score++;
-        }
-        hasAnsweredCurrent = true;
-      }
-
       currentQuestion++;
       if (currentQuestion < quizData.length) {
         loadQuestion();
@@ -217,3 +290,4 @@
   </script>
 </body>
 </html>
+s
